--- a/tests/app/jinja2/app/detail.html
+++ b/tests/app/jinja2/app/detail.html
@@ -1,8 +1,6 @@
-{% load streamfield %}
-
 <h1>{{ page.header }}</h1>
 <div class="text">
-  {{ page.text|linebreaks }}
+  {{ page.text|linebreaksbr }}
 </div>
 
 {% render_stream page.stream %}
