limit image size

--- a/tests/blocks/jinja2/blocks/image_block.html
+++ b/tests/blocks/jinja2/blocks/image_block.html
@@ -1,3 +1,4 @@
 <img src="{{ block.image.url }}"
      title="{{ block.title }}"
-     alt="{{ block.alt }}">
+     alt="{{ block.alt }}"
+     style="max-width: 600px;">
