change image block to use external images

--- a/tests/blocks/jinja2/blocks/image_block.html
+++ b/tests/blocks/jinja2/blocks/image_block.html
@@ -1,4 +1,4 @@
-<img src="{{ block.image.url }}"
+<img src="{{ block.image }}"
      title="{{ block.title }}"
      alt="{{ block.alt }}"
      style="max-width: 600px;">
