inherit parent context

--- a/tests/blocks/jinja2/blocks/text.html
+++ b/tests/blocks/jinja2/blocks/text.html
@@ -1,1 +1,1 @@
-<div{% if parent_context.theme %} class="text--{{ parent_context.theme }}"{% endif %}>{{ block.text|linebreaks }}</div>
+<div{% if theme %} class="text--{{ theme }}"{% endif %}>{{ block.text|linebreaks }}</div>
