--- a/tests/blocks/jinja2/blocks/header_block.html
+++ b/tests/blocks/jinja2/blocks/header_block.html
@@ -1,1 +1,1 @@
-<h{{ block.rank }}>{{ block.text }}</h{{ block.rank }}>
+<h{{ block.rank }}{% if theme %} class="header--{{ theme }}"{% endif %}>{{ block.text }}</h{{ block.rank }}>
