--- a/tests/app/jinja2/app/detail.html
+++ b/tests/app/jinja2/app/detail.html
@@ -1,3 +1,7 @@
 <h1>{{ page.header }}</h1>
 
+{% if page.epigraph %}
+  <div style="font-style: italic">{% render_block page.epigraph %}</div>
+{% endif %}
+
 {% render_stream page.stream %}
